--- a/templates/profile.html
+++ b/templates/profile.html
@@ -85,8 +85,8 @@
             
             <button id="submit" name="submit">Sign in</button>
         </form>
-        <p style="margin-top: 10px; color: white;">Don't have an account? <a href="{{url_for('registration')}}">Register here</a></p>
+        <p style="margin-top:10px; color:white;”>Don't have an account? 
+<a href="register.html”>Register here</a> </p>
     </div>
 </body>
 </html>
-
