--- a/templates/register.html
+++ b/templates/register.html
@@ -116,7 +116,7 @@
             </div>
             <button type="submit">Register</button>
         </form>
-        <p>Already have an account? <a href="{{url_for('login')}}">Login here</a></p>
+        <p>Already have an account? <a href="index.html">Login here</a></p>
     </div>
 </body>
 </html>
